--- a/Assets/Plugins/Android/res/values/strings.xml
+++ b/Assets/Plugins/Android/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">李哲</string>
+  <string name="app_name">牛仔棋牌</string>
 </resources>
